Fix box redundant + typerwriter include bold and newline + time format + scrollbar

--- a/ChatBot/static/style.css
+++ b/ChatBot/static/style.css
@@ -29,6 +29,22 @@ body,html{
 .msg_card_body{
 	overflow-y: auto;
 }
+.msg_card_body::-webkit-scrollbar {
+	width: 10px;
+}
+
+.msg_card_body::-webkit-scrollbar-track {
+	background: rgb(44, 47, 59);
+}
+
+.msg_card_body::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 2px; /* Adjust this value to change the roundness */
+}
+
+.msg_card_body::-webkit-scrollbar-thumb:hover {
+background: #555;
+}
 .card-header{
 	border-radius: 15px 15px 0 0 !important;
 	border-bottom: 0 !important;
@@ -135,7 +151,7 @@ border-radius: 0 0 15px 15px !important;
 	margin-left: 15px;
 }
 .user_info span{
-	font-size: 20px;
+	font-size: 16px;
 	color: white;
 }
 .user_info p{
@@ -144,33 +160,39 @@ border-radius: 0 0 15px 15px !important;
 }
 .video_cam span{
 	color: white;
-	font-size: 20px;
+	font-size: 16px;
 	cursor: pointer;
-	margin-right: 20px;
+	margin-right: 16px;
 }
 .msg_cotainer{
 	max-width: 50%;
 	margin-top: auto;
-	margin-bottom: auto;
 	margin-left: 10px;
 	border-radius: 25px;
 	background-color: rgb(82, 172, 255);
 	padding: 10px;
 	position: relative;
+	font-family: sans-serif;
+	font-size: 16px;
 }
+.msg_cotainer pre, .msg_cotainer span {
+	margin: 0;
+	padding: 0;
+  }
 @keyframes typewriter {
 	0% { width: 0; }
 	100% { width: max-content; }
   }
 .msg_cotainer_send{
 	margin-top: auto;
-	margin-bottom: auto;
+	margin-bottom: none;
 	margin-right: 10px;
 	border-radius: 25px;
 	background-color: #58cc71;
 	padding: 10px;
 	position: relative;
 	font-family: sans-serif;
+	font-size: 16px;
 }
 .msg_time{
 	position: absolute;
@@ -195,7 +217,7 @@ border-radius: 0 0 15px 15px !important;
 	top: 10px;
 	color: white;
 	cursor: pointer;
-	font-size: 20px;
+	font-size: 16px;
 }
 .action_menu{
 	z-index: 1;
